# limx_tron1

./: 4_底层运动控制开发接口.md  5_上层应用开发接口.md  cmd_vel_publisher_node.py  continuous_walk_test.py  full_feature_test.py  readme.md  readme_git.md  readme_sim.md  sim_demo
robot-joystick/: README.md
src/: sim_demo.cpp
src/limxsdk-lowlevel/include/limxsdk/: apibase.h  datatypes.h  tron2.h
src/limxsdk-lowlevel/python3/examples/api/: example_humanoid.py  example_tron1.py  example_tron2.py
src/limxsdk-lowlevel/python3/win/: limxsdk-3.4.2-py3-none-any.whl
src/robot-visualization/ros2/launch/: pointfoot_rviz_hw.launch.py
src/tron1-gazebo-ros2/limxsdk-sim/include/limxsdk/: tron2_sim.h
src/tron1-gazebo-ros2/limxsdk-sim/lib/win/: limxsdk_sim.lib
src/tron1-rl-deploy-ros2/: README.md  README_cn.md
src/tron1-rl-deploy-ros2/robot_controllers/config/pointfoot/PF_P441C2/: params.yaml
src/tron1-rl-deploy-ros2/robot_controllers/config/pointfoot/PF_TRON1A/: params.yaml
src/tron1-rl-deploy-ros2/robot_controllers/config/pointfoot/SF_TRON1B/: params.yaml
src/tron1-rl-deploy-ros2/robot_controllers/config/pointfoot/WF_TRON1B/: params.yaml
src/tron1-rl-deploy-ros2/robot_controllers/include/robot_controllers/: ControllerBase.h
src/tron1-rl-deploy-ros2/robot_controllers/src/: ControllerBase.cpp  PointfootController.cpp  SolefootController.cpp  WheelfootController.cpp
src/tron1-rl-deploy-ros2/robot_hw/launch/: pointfoot_hw.launch.py  pointfoot_hw_sim.launch.py
src/tron1-rl-deploy-ros2/robot_hw/src/: HardwareLoop.cpp
src/tron1_ctrl_ros2/: .gitignore  CMakeLists.txt  README.md  package.xml  websocket_client.cpp  websocket_client.py
src/tron1_ctrl_ros2/launch/: limxsdk_teleop.launch.py  sim_control.launch.py  tron1.launch.py
src/tron1_ctrl_ros2/msg/: RobotStatus.msg
src/tron1_ctrl_ros2/src/: limxsdk_teleop_node.cpp  tron1_node.cpp  websocket_cmd_vel_bridge.cpp
src/tron1_ctrl_ros2/srv/: SetBaseHeight.srv  SetLightEffect.srv
src/tron1_nav2/config/: nav2_params.yaml  nav2_params.yaml 
src/tron1_nav2/launch/: tron1_bringup.launch.py
